--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -271,7 +271,7 @@
 
   /* Navbar Component */
   .header {
-    @apply flex-between fixed h-16 w-full border-b-4 border-purple-100 bg-white p-5 lg:hidden;
+    @apply flex-between fixed h-16 w-full border-b-4 border-purple-100 p-5 lg:hidden z-50 transition-all duration-300 ease-in-out;
   }
 
   .header-nav_elements {
